--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
     <h1>hello world</h1>
+    <br>
+    <a href="{% url 'index:myvariable' '2019' '01' '10' %}">查看日期</a>
 </body>
 </html>
